k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travel-exp-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: travel-exp-backend
  template:
    metadata:
      labels:
        app: travel-exp-backend
    spec:
      containers:
      - name: backend
        image: aeroserg/travel-exp-backend:latest
        ports:
        - containerPort: 4000
        resources:
          requests:
            cpu: 100m
            memory: 1024Mi
          limits:
            cpu: 1000m
            memory: 2048Mi

---

apiVersion: v1
kind: Service
metadata:
  name: travel-exp-backend-svc
spec:
  type: NodePort
  selector:
    app: travel-exp-backend
  ports:
    - port: 4000
      targetPort: 4000
      nodePort: 32001
