k8s/frontend.yaml
# k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travel-exp-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: travel-exp-frontend
  template:
    metadata:
      labels:
        app: travel-exp-frontend
    spec:
      containers:
      - name: frontend
        image: aeroserg/travel-exp-frontend:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: travel-exp-frontend-svc
spec:
  type: NodePort
  selector:
    app: travel-exp-frontend
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 32000
