k8s/grafana-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-grafana
  namespace: monitoring
spec:
  type: LoadBalancer
  externalIPs:
    - 158.160.44.174
  selector:
    app.kubernetes.io/name: grafana
  ports:
    - name: http
      port: 3007
      targetPort: 3000
      protocol: TCP
